--- a/KTodo/MainWindow.xaml
+++ b/KTodo/MainWindow.xaml
@@ -1,12 +1,148 @@
-﻿<Window x:Class="KTodo.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:KTodo"
-        mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
+﻿<!--  TODO  -->
+<hc:GlowWindow
+    x:Class="KTodo.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:hc="https://handyorg.github.io/handycontrol"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    Width="1200"
+    Height="675"
+    MinWidth="1000"
+    MinHeight="500"
+    mc:Ignorable="d"
+    ActiveGlowColor="{DynamicResource PrimaryColor}"
+    Background="White"
+    Style="{StaticResource WindowGlow}"
+    Title="KTodo">
+    <Window.Resources>
+        <Brush x:Key="BrushBg">#ECF9FF</Brush>
+        <Brush x:Key="BrushButtonFg">#0A2647</Brush>
+        <Brush x:Key="BrushSplitterBg">#8EA7E9</Brush>
+        <sys:String x:Key="StrUnknownTodoItemHeader">&lt;待办条目标题&gt;</sys:String>
+        <sys:String x:Key="StrUnknownTodoItemCaption">&lt;待办条目详细描述&gt;</sys:String>
+    </Window.Resources>
+    <DockPanel>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition
+                    Width="200"
+                    MinWidth="150"
+                    MaxWidth="300" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" MinWidth="300" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" MinWidth="300" />
+            </Grid.ColumnDefinitions>
 
-    </Grid>
-</Window>
+            <Grid Grid.Column="0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition />
+                </Grid.RowDefinitions>
+
+                <!--  TODO  -->
+                <Button
+                    x:Name="ButtonCreateNewTodoList"
+                    Grid.Row="0"
+                    Margin="5"
+                    HorizontalAlignment="Stretch"
+                    Background="{StaticResource BrushBg}"
+                    BorderThickness="0"
+                    Content="创建新清单"
+                    Foreground="{StaticResource BrushButtonFg}" />
+                <!--  TODO  -->
+                <ListBox
+                    x:Name="ListBoxTodoLists"
+                    Grid.Row="1"
+                    Margin="5">
+                    <ListBox.Resources>
+                        <ContextMenu x:Key="ContextMenu">
+                            <!--  TODO  -->
+                            <MenuItem Header="重命名" />
+                            <!--  TODO  -->
+                            <MenuItem Header="清空" />
+                            <!--  TODO  -->
+                            <MenuItem Header="删除" />
+                        </ContextMenu>
+                    </ListBox.Resources>
+                    <ListBox.ItemContainerStyle>
+                        <Style BasedOn="{StaticResource ListBoxItemBaseStyle}" TargetType="ListBoxItem">
+                            <Setter Property="ContextMenu" Value="{StaticResource ContextMenu}" />
+                        </Style>
+                    </ListBox.ItemContainerStyle>
+                </ListBox>
+            </Grid>
+            <GridSplitter
+                Grid.Column="1"
+                Width="2.5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Stretch"
+                Background="{StaticResource BrushSplitterBg}" />
+            <DockPanel Grid.Column="2" Background="{StaticResource BrushBg}">
+                <!--  TODO  -->
+                <hc:TextBox
+                    x:Name="TextBoxNewTodoItem"
+                    Margin="5"
+                    AcceptsReturn="False"
+                    DockPanel.Dock="Top"
+                    hc:InfoElement.Placeholder="输入一条待办事项，回车创建"
+                    HorizontalScrollBarVisibility="Auto"
+                    MaxLines="1" />
+                <!--  TODO  -->
+                <ScrollViewer Margin="5">
+                    <StackPanel
+                        x:Name="StackPanelTodoItems"
+                        Background="{StaticResource BrushBg}"
+                        ToolTip="右键此面板空白位置即可一键删除所有已完成的待办条目。" />
+                </ScrollViewer>
+            </DockPanel>
+
+            <GridSplitter
+                Grid.Column="3"
+                Width="2.5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Stretch"
+                Background="{StaticResource BrushSplitterBg}" />
+            <Grid
+                x:Name="GridTodoItemDetails"
+                Grid.Column="4"
+                Margin="25">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="10" />
+                    <RowDefinition Height="*" />
+                </Grid.RowDefinitions>
+
+                <!--  TODO  -->
+                <hc:TextBox
+                    x:Name="TextBoxTodoItemHeader"
+                    Grid.Row="0"
+                    AcceptsReturn="False"
+                    BorderBrush="White"
+                    FontSize="40"
+                    FontWeight="SemiBold"
+                    hc:InfoElement.Placeholder="待办条目标题"
+                    IsReadOnly="True"
+                    MaxLines="2"
+                    Text="{StaticResource StrUnknownTodoItemHeader}"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" />
+                <hc:TextBox
+                    x:Name="TextBoxTodoItemCaption"
+                    Grid.Row="2"
+                    VerticalAlignment="Top"
+                    AcceptsReturn="True"
+                    BorderBrush="White"
+                    FontSize="17"
+                    hc:InfoElement.Placeholder="待办条目详细描述"
+                    IsReadOnly="True"
+                    Text="{StaticResource StrUnknownTodoItemCaption}"
+                    TextAlignment="Left"
+                    TextWrapping="Wrap"
+                    VerticalScrollBarVisibility="Auto" />
+            </Grid>
+        </Grid>
+    </DockPanel>
+</hc:GlowWindow>
